Mastering Kubernetes/Day 19 Gatekeeper(policy enforcement in cluster)/1-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sapprovedimages
spec:
  crd:
    spec:
      names:
        kind: K8sApprovedImages
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sapprovedimages

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]

          # Must not run as root
          not container.securityContext.runAsNonRoot
          msg := sprintf("Container %v must runAsNonRoot", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]

          # Must pull only from approved registry
          not startswith(container.image, "myregistry.example.com/")
          msg := sprintf("Container %v is using unapproved image %v", [container.name, container.image])
        }
