Mastering Kubernetes/Day 19 Gatekeeper(policy enforcement in cluster)/2-constraint-approved-images.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sApprovedImages
metadata:
  name: approved-images
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
